# pokemon-cards-project

./: .gitignore  README.md  pyproject.toml
data/: pokemon&cards_en.db  pokemon&cards_fr.db  pokemon&cards_ja.db
src/: config.py
src/app/: Home.py  Projet_sql.sqbpro  utils.py
src/app/analytics/: badges.py  filters.py  romans.py
src/app/db/: connection.py
src/app/pages/: 1 Cards Viewer.py  1 Pokémon Cards Viewer.py  2 Pokémon Leaderbord.py  3 Illustrator Leaderbord.py  4 Illustrator Comparison — Series & Sets Contribution.py
src/app/ui/: __init__.py  dashboard_output.py  filters_module.py  language.py
src/tcdex_etl/: db.py  fetcher.py  main.py  maps.py
